# tenera-persona-tracking

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
app/: main.py
app/api/v1/: clusters.py  events.py  personas.py  posthog.py  router.py
app/cli/: client.py  main.py
app/cli/commands/: cluster.py  entity.py  events.py  persona.py  posthog.py  server.py  track.py
app/clustering/: engine.py  llm.py  scheduler.py  service.py
app/core/: auth.py  config.py  database.py
app/integrations/: posthog_client.py
app/models/: __init__.py  base.py  cluster.py  entity.py  event.py  persona.py  posthog.py
app/schemas/: cluster.py  persona.py  posthog.py
app/static/: style.css
app/templates/: dashboard.html
doc/: API.md
examples/: api_example.py  quickstart.sh  seed_and_cluster.py
forward-dash/: CLUSTERING.md  DESIGN.md  ROADMAP.md
