[project]
name = "tenera-persona-tracking"
version = "0.1.0"
description = "Open-source persona tracking and cohort analytics engine. API-first, designed to integrate with Tenera."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "supabase>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "eval_type_backport>=0.3.0; python_version < '3.10'",
]

[project.scripts]
tpt = "app.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
